split variable_labels from metadata function

--- a/nbs/01_wrds/00_wrds_api.ipynb
+++ b/nbs/01_wrds/00_wrds_api.ipynb
@@ -728,11 +728,11 @@
     "\n",
     "    with Connection(wrds_username = wrds_username) as db:\n",
     "        df = db.raw_sql(sql=sql_string, params=params)\n",
-    "        db.close()\n",
     "    return df"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -963,6 +963,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
