--- a/nbs/01_wrds/03_compa.ipynb
+++ b/nbs/01_wrds/03_compa.ipynb
@@ -11,6 +11,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -36,142 +37,14 @@
     "from __future__ import annotations\n",
     "from pathlib import Path\n",
     "from typing import List\n",
+    "import os\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
     "import pandasmore as pdm\n",
-    "from finsets.wrds import wrds_api"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Variable Name</th>\n",
-       "      <th>Type</th>\n",
-       "      <th>Description</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>GVKEY</td>\n",
-       "      <td>string</td>\n",
-       "      <td>GVKEY -- Global Company Key (GVKEY)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>CONM</td>\n",
-       "      <td>string</td>\n",
-       "      <td>Company Name (CONM)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>TIC</td>\n",
-       "      <td>string</td>\n",
-       "      <td>Ticker Symbol (TIC)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>CUSIP</td>\n",
-       "      <td>string</td>\n",
-       "      <td>CUSIP (CUSIP)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>CIK</td>\n",
-       "      <td>string</td>\n",
-       "      <td>CIK Number (CIK)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>969</th>\n",
-       "      <td>PRCH_C</td>\n",
-       "      <td>double</td>\n",
-       "      <td>PRCH_C -- Price High - Annual - Calendar (PRCH_C)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>970</th>\n",
-       "      <td>PRCH_F</td>\n",
-       "      <td>double</td>\n",
-       "      <td>PRCH_F -- Price High - Annual - Fiscal (PRCH_F)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>971</th>\n",
-       "      <td>PRCL_C</td>\n",
-       "      <td>double</td>\n",
-       "      <td>PRCL_C -- Price Low - Annual - Calendar (PRCL_C)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>972</th>\n",
-       "      <td>PRCL_F</td>\n",
-       "      <td>double</td>\n",
-       "      <td>PRCL_F -- Price Low - Annual - Fiscal (PRCL_F)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>973</th>\n",
-       "      <td>SICH</td>\n",
-       "      <td>double</td>\n",
-       "      <td>SICH -- Standard Industrial Classification - H...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>974 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Variable Name    Type                                        Description\n",
-       "0          GVKEY   string                GVKEY -- Global Company Key (GVKEY)\n",
-       "1           CONM   string                                Company Name (CONM)\n",
-       "2            TIC   string                                Ticker Symbol (TIC)\n",
-       "3          CUSIP   string                                      CUSIP (CUSIP)\n",
-       "4            CIK   string                                   CIK Number (CIK)\n",
-       "..            ...     ...                                                ...\n",
-       "969        PRCH_C  double  PRCH_C -- Price High - Annual - Calendar (PRCH_C)\n",
-       "970        PRCH_F  double    PRCH_F -- Price High - Annual - Fiscal (PRCH_F)\n",
-       "971        PRCL_C  double   PRCL_C -- Price Low - Annual - Calendar (PRCL_C)\n",
-       "972        PRCL_F  double     PRCL_F -- Price Low - Annual - Fiscal (PRCL_F)\n",
-       "973         SICH   double  SICH -- Standard Industrial Classification - H...\n",
-       "\n",
-       "[974 rows x 3 columns]"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = pd.read_csv('../../resources/compa_variable_descriptions.csv')\n",
-    "df"
+    "from finsets.wrds import wrds_api\n",
+    "from finsets import RESOURCES"
    ]
   },
   {
@@ -181,9 +54,9 @@
    "outputs": [],
    "source": [
     "#| export \n",
-    "def metadata(rawfile: str|Path='../../resources/compa_variable_descriptions.csv', # location of the raw metadata file\n",
-    "             outfile: str|Path='../../metadata/compa_variable_labels_types.pkl', # where to save the cleaned metadata file \n",
+    "def variable_labels(rawfile: str|Path=RESOURCES/'compa_variable_descriptions.csv', # location of the raw variable labels file\n",
     "             ) -> pd.DataFrame:\n",
+    "    \"Loads raw variable labels file, cleans it and returns it as a pd.DataFrame\"\n",
     "\n",
     "    df = pd.read_csv(rawfile)\n",
     "    df['Variable Label'] = df.apply(lambda row: row['Description'].replace(row['Variable Name'].strip()+' -- ', ''), axis=1)\n",
@@ -191,7 +64,6 @@
     "    df['Variable Name'] = df['Variable Name'].str.strip().str.lower()\n",
     "    df = df[['Variable Name', 'Variable Label', 'Type']].copy()\n",
     "    df.columns = ['name','label','type']\n",
-    "    df.to_pickle(outfile)\n",
     "    return df"
    ]
   },
@@ -321,6 +193,240 @@
     }
    ],
    "source": [
+    "variable_labels()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def metadata(wrds_username: str=None\n",
+    "             ) -> pd.DataFrame:\n",
+    "    \"Collects metadata from WRDS `comp.funda` table and merges it with `variable_labels`.\"\n",
+    "\n",
+    "    if wrds_username is None:\n",
+    "        wrds_username = os.getenv('WRDS_USERNAME')\n",
+    "        if wrds_username is None: wrds_username = input(\"Enter your WRDS username: \") \n",
+    "\n",
+    "    with wrds_api.Connection(wrds_username = wrds_username) as db:\n",
+    "        funda = db.describe_table('comp','funda')\n",
+    "        nr_rows = db.get_row_count('comp','funda')\n",
+    "        \n",
+    "    meta = funda[['name','type']].copy()\n",
+    "    meta['nr_rows'] = nr_rows\n",
+    "    meta['wrds_library'] = 'comp'\n",
+    "    meta['wrds_table'] = 'funda'\n",
+    "\n",
+    "    meta = meta.merge(variable_labels()[['name','label']], how='left', on='name')\n",
+    "    \n",
+    "    meta['output_of'] = 'wrds.compa.download()'\n",
+    "    meta = pdm.order_columns(meta,these_first=['name','label','output_of'])\n",
+    "    for v in list(meta.columns):\n",
+    "        meta[v] = meta[v].astype('string')\n",
+    "    \n",
+    "    return meta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 879854 rows in comp.funda.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>label</th>\n",
+       "      <th>output_of</th>\n",
+       "      <th>type</th>\n",
+       "      <th>nr_rows</th>\n",
+       "      <th>wrds_library</th>\n",
+       "      <th>wrds_table</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>gvkey</td>\n",
+       "      <td>Global Company Key</td>\n",
+       "      <td>wrds.compa.download()</td>\n",
+       "      <td>VARCHAR(6)</td>\n",
+       "      <td>879854</td>\n",
+       "      <td>comp</td>\n",
+       "      <td>funda</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>datadate</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>wrds.compa.download()</td>\n",
+       "      <td>DATE</td>\n",
+       "      <td>879854</td>\n",
+       "      <td>comp</td>\n",
+       "      <td>funda</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>fyear</td>\n",
+       "      <td>Data Year - Fiscal</td>\n",
+       "      <td>wrds.compa.download()</td>\n",
+       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>879854</td>\n",
+       "      <td>comp</td>\n",
+       "      <td>funda</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>indfmt</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>wrds.compa.download()</td>\n",
+       "      <td>VARCHAR(12)</td>\n",
+       "      <td>879854</td>\n",
+       "      <td>comp</td>\n",
+       "      <td>funda</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>consol</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>wrds.compa.download()</td>\n",
+       "      <td>VARCHAR(2)</td>\n",
+       "      <td>879854</td>\n",
+       "      <td>comp</td>\n",
+       "      <td>funda</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>943</th>\n",
+       "      <td>au</td>\n",
+       "      <td>Auditor</td>\n",
+       "      <td>wrds.compa.download()</td>\n",
+       "      <td>VARCHAR(8)</td>\n",
+       "      <td>879854</td>\n",
+       "      <td>comp</td>\n",
+       "      <td>funda</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>944</th>\n",
+       "      <td>auop</td>\n",
+       "      <td>Auditor Opinion</td>\n",
+       "      <td>wrds.compa.download()</td>\n",
+       "      <td>VARCHAR(8)</td>\n",
+       "      <td>879854</td>\n",
+       "      <td>comp</td>\n",
+       "      <td>funda</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>945</th>\n",
+       "      <td>auopic</td>\n",
+       "      <td>Auditor Opinion - Internal Control</td>\n",
+       "      <td>wrds.compa.download()</td>\n",
+       "      <td>VARCHAR(1)</td>\n",
+       "      <td>879854</td>\n",
+       "      <td>comp</td>\n",
+       "      <td>funda</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>946</th>\n",
+       "      <td>ceoso</td>\n",
+       "      <td>Chief Executive Officer SOX Certification</td>\n",
+       "      <td>wrds.compa.download()</td>\n",
+       "      <td>VARCHAR(1)</td>\n",
+       "      <td>879854</td>\n",
+       "      <td>comp</td>\n",
+       "      <td>funda</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>947</th>\n",
+       "      <td>cfoso</td>\n",
+       "      <td>Chief Financial Officer SOX Certification</td>\n",
+       "      <td>wrds.compa.download()</td>\n",
+       "      <td>VARCHAR(1)</td>\n",
+       "      <td>879854</td>\n",
+       "      <td>comp</td>\n",
+       "      <td>funda</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>948 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         name                                       label  \\\n",
+       "0       gvkey                         Global Company Key    \n",
+       "1    datadate                                        <NA>   \n",
+       "2       fyear                         Data Year - Fiscal    \n",
+       "3      indfmt                                        <NA>   \n",
+       "4      consol                                        <NA>   \n",
+       "..        ...                                         ...   \n",
+       "943        au                                    Auditor    \n",
+       "944      auop                            Auditor Opinion    \n",
+       "945    auopic         Auditor Opinion - Internal Control    \n",
+       "946     ceoso  Chief Executive Officer SOX Certification    \n",
+       "947     cfoso  Chief Financial Officer SOX Certification    \n",
+       "\n",
+       "                 output_of              type nr_rows wrds_library wrds_table  \n",
+       "0    wrds.compa.download()        VARCHAR(6)  879854         comp      funda  \n",
+       "1    wrds.compa.download()              DATE  879854         comp      funda  \n",
+       "2    wrds.compa.download()  DOUBLE_PRECISION  879854         comp      funda  \n",
+       "3    wrds.compa.download()       VARCHAR(12)  879854         comp      funda  \n",
+       "4    wrds.compa.download()        VARCHAR(2)  879854         comp      funda  \n",
+       "..                     ...               ...     ...          ...        ...  \n",
+       "943  wrds.compa.download()        VARCHAR(8)  879854         comp      funda  \n",
+       "944  wrds.compa.download()        VARCHAR(8)  879854         comp      funda  \n",
+       "945  wrds.compa.download()        VARCHAR(1)  879854         comp      funda  \n",
+       "946  wrds.compa.download()        VARCHAR(1)  879854         comp      funda  \n",
+       "947  wrds.compa.download()        VARCHAR(1)  879854         comp      funda  \n",
+       "\n",
+       "[948 rows x 7 columns]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
     "metadata()"
    ]
   },
@@ -332,7 +438,7 @@
    "source": [
     "#| export\n",
     "def default_raw_vars():\n",
-    "    \"\"\"Default variables used in `download` if none are specified. Takes about 2 min to download.\"\"\"\n",
+    "    \"\"\"Default variables used in `download` if none are specified.\"\"\"\n",
     "\n",
     "    return ['datadate', 'gvkey', 'cusip' ,'cik' ,'tic' ,'fyear' ,'fyr' ,'naicsh', 'sich' ,'exchg',  \n",
     "            'lt' ,'at' ,'txditc' ,'pstkl' ,'pstkrv' ,'pstk' ,'csho' ,'ajex' , 'rdip',\n",
@@ -373,7 +479,7 @@
     "             start_date: str=\"01/01/1900\", # Start date in MM/DD/YYYY format\n",
     "             end_date: str=None #End date in MM/DD/YYYY format; if None, defaults to current date\n",
     "             ) -> pd.DataFrame:\n",
-    "    \"\"\"Downloads `vars` from `start_date` to `end_date` from WRDS comp.funda library and adds PERMNO and PERMCO as in CCM\"\"\"\n",
+    "    \"\"\"Downloads `vars` from `start_date` to `end_date` from WRDS `comp.funda` library and adds PERMNO and PERMCO as in CCM\"\"\"\n",
     "\n",
     "    if vars is None: vars = default_raw_vars()\n",
     "    vars = ','.join(['a.gvkey', 'a.datadate'] + \n",
