testing metadata for features

--- a/nbs/01_wrds/03_compa.ipynb
+++ b/nbs/01_wrds/03_compa.ipynb
@@ -727,11 +727,16 @@
     "#| export\n",
     "def book_equity(df: pd.DataFrame=None, # If None, downloads (and cleans) only required vars\n",
     "                add_itcb=False,\n",
-    "                list_reqs: bool=False # If true, just returns a list of the required variables\n",
+    "                return_metadata: bool=False # If true, just returns a list of the required variables\n",
     "                ) -> pd.DataFrame:\n",
     "\n",
-    "    reqs = ['at', 'lt', 'seq', 'ceq', 'txditc', 'pstk', 'pstkrv', 'pstkl', 'itcb']\n",
-    "    if list_reqs: return reqs\n",
+    "    metadata = {'inputs': {'wrds.compa.clean()': ['at', 'lt', 'seq', 'ceq', 'txditc', 'pstk', 'pstkrv', 'pstkl', 'itcb']},\n",
+    "                'outputs': {'wrds.compa.book_equity()': ['bookeq','shreq','pref_stock']},\n",
+    "                'labels': {'bookeq': 'Book equity', 'shreq': 'Shareholder equity', 'pref_stock': 'Preferred stock'}\n",
+    "    }      \n",
+    "    if return_metadata: return metadata\n",
+    "\n",
+    "    reqs = metadata['inputs']['wrds.compa.clean()']\n",
     "    if df is None: df = clean(vars=reqs)\n",
     "    df = df[reqs].copy()\n",
     "\n",
@@ -745,7 +750,7 @@
     "    df['bookeq'] = df['shreq'] + df['txditc'].fillna(0) - df['pref_stock']\n",
     "    if add_itcb: df['bookeq'] = df['bookeq'] + df['itcb'].fillna(0)\n",
     "    \n",
-    "    return df[['bookeq','shreq','pref_stock']].copy()"
+    "    return df[metadata['outputs']['wrds.compa.book_equity()']].copy()"
    ]
   },
   {
@@ -756,7 +761,19 @@
     {
      "data": {
       "text/plain": [
-       "['at', 'lt', 'seq', 'ceq', 'txditc', 'pstk', 'pstkrv', 'pstkl', 'itcb']"
+       "{'inputs': {'wrds.compa.clean()': ['at',\n",
+       "   'lt',\n",
+       "   'seq',\n",
+       "   'ceq',\n",
+       "   'txditc',\n",
+       "   'pstk',\n",
+       "   'pstkrv',\n",
+       "   'pstkl',\n",
+       "   'itcb']},\n",
+       " 'outputs': {'wrds.compa.book_equity()': ['bookeq', 'shreq', 'pref_stock']},\n",
+       " 'labels': {'bookeq': 'Book equity',\n",
+       "  'shreq': 'Shareholder equity',\n",
+       "  'pref_stock': 'Preferred stock'}}"
       ]
      },
      "execution_count": null,
@@ -766,14 +783,26 @@
    ],
    "source": [
     "#| eval: false\n",
-    "book_equity(list_reqs=True)"
+    "book_equity(return_metadata=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[21], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m#| eval: false\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m beq \u001b[39m=\u001b[39m book_equity(df)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#| eval: false\n",
     "beq = book_equity(df)"
